<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="agreement"><![CDATA[Dengan mencentang checkbox ketika login, maka Anda setuju dengan syarat dan ketentuan Terms & Conditions dan privasi data Data Privacy penggunaan aplikasi Teman Jabar.]]></string>
    <string name="web_client_id">468840996773-bfu58ovhcnnjaapvn4jdiotf9v77bi30.apps.googleusercontent.com</string>
    <string name="register">Register</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet facilisis magna etiam. Justo eget magna fermentum iaculis eu non diam. Pulvinar neque laoreet suspendisse interdum consectetur libero id faucibus nisl. Dapibus ultrices in iaculis nunc. Mattis nunc sed blandit libero volutpat sed. Leo in vitae turpis massa sed elementum tempus egestas sed. Nibh mauris cursus mattis molestie a iaculis. Laoreet non curabitur gravida arcu ac. Vel pretium lectus quam id. Sed nisi lacus sed viverra tellus in hac habitasse. Lacus vel facilisis volutpat est. Cursus metus aliquam eleifend mi in nulla. Amet justo donec enim diam vulputate ut pharetra sit amet. Duis ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Purus gravida quis blandit turpis cursus in hac habitasse. Eget felis eget nunc lobortis mattis aliquam. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam. Orci sagittis eu volutpat odio facilisis. Vel turpis nunc eget lorem dolor. Imperdiet dui accumsan sit amet nulla facilisi morbi. Placerat orci nulla pellentesque dignissim enim sit amet venenatis urna. Enim ut sem viverra aliquet eget sit. Nunc mi ipsum faucibus vitae aliquet. Maecenas volutpat blandit aliquam etiam erat. Gravida cum sociis natoque penatibus et magnis. Diam ut venenatis tellus in metus vulputate. Maecenas accumsan lacus vel facilisis volutpat est velit. Mauris ultrices eros in cursus turpis massa tincidunt dui. Eget felis eget nunc lobortis mattis aliquam. Elementum pulvinar etiam non quam. Eget est lorem ipsum dolor sit amet consectetur. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. In aliquam sem fringilla ut morbi tincidunt. Accumsan in nisl nisi scelerisque eu ultrices vitae. Ut consequat semper viverra nam libero. Mi sit amet mauris commodo. Egestas pretium aenean pharetra magna ac placerat vestibulum lectus. Tellus at urna condimentum mattis pellentesque. Aenean euismod elementum nisi quis eleifend quam. Tincidunt augue interdum velit euismod in pellentesque massa placerat. In fermentum posuere urna nec. Facilisis sed odio morbi quis commodo odio aenean sed adipiscing. Est ullamcorper eget nulla facilisi etiam dignissim diam quis. Id semper risus in hendrerit gravida. Neque volutpat ac tincidunt vitae semper quis lectus nulla at. Duis at tellus at urna condimentum. Duis ultricies lacus sed turpis tincidunt id aliquet risus. Duis at consectetur lorem donec. Et tortor consequat id porta nibh venenatis cras sed felis. Gravida quis blandit turpis cursus in hac habitasse. Quam elementum pulvinar etiam non. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Adipiscing elit duis tristique sollicitudin nibh sit amet commodo. Lacinia quis vel eros donec ac. Viverra suspendisse potenti nullam ac. Tincidunt praesent semper feugiat nibh sed pulvinar proin gravida hendrerit. Euismod in pellentesque massa placerat duis. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Libero justo laoreet sit amet cursus. Maecenas sed enim ut sem viverra aliquet eget sit. Urna et pharetra pharetra massa massa. A lacus vestibulum sed arcu non odio euismod lacinia. Euismod quis viverra nibh cras. Dui ut ornare lectus sit amet. Morbi non arcu risus quis varius quam. At auctor urna nunc id cursus metus. Viverra mauris in aliquam sem fringilla. Pulvinar etiam non quam lacus suspendisse. Justo donec enim diam vulputate ut pharetra. Fusce id velit ut tortor pretium viverra. Neque convallis a cras semper. Volutpat maecenas volutpat blandit aliquam etiam erat velit. Orci phasellus egestas tellus rutrum. Diam vulputate ut pharetra sit amet aliquam. Elementum integer enim neque volutpat ac tincidunt. Blandit turpis cursus in hac habitasse platea dictumst quisque. Id donec ultrices tincidunt arcu non sodales neque. Et malesuada fames ac turpis egestas sed tempus. Felis bibendum ut tristique et egestas quis ipsum suspendisse. Eget nulla facilisi etiam dignissim diam. Tortor dignissim convallis aenean et tortor at risus viverra adipiscing.</string>
    <string name="register_account">Belum punya akun? Daftar Sekarang</string>
    <string name="selesai">Selesai</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="mohon_masukkan_password">Mohon Masukkan Password</string>
    <string name="masukkan_nama">Masukkan nama Anda</string>
    <string name="nama">Nama</string>
    <string name="mohon_masukkan_nama_anda">Mohon Masukkan Nama Anda</string>
    <string name="mohon_masukkan_e_mail_anda">Mohon Masukkan E-Mail Anda</string>
    <string name="e_mail">E-Mail</string>
    <string name="masukkan_e_mail">Masukkan E-Mail Anda</string>
    <string name="register_agreement">Dengan mencentang checkbox ini, maka Anda setuju dengan syarat dan ketentuan diatas sebagai pengguna aplikasi Teman Jabar.</string>
    <string name="syarat_dan_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
</resources>